feat: add seo title and description

--- a/data/company.yml
+++ b/data/company.yml
@@ -1,3 +1,6 @@
+SEO:
+  site_title: Fiction
+  description: A template for Hugo, adapted from the MIT-licensed Fiction Bootstrap template from Theme Fisher.
 company_name: REDCODDER SOLUTION
 contact:
   address: "DeviserWeb 24/A,Jalalabad amborkhana amagnina, Sylhet."
