--- a/data/company.yml
+++ b/data/company.yml
@@ -1,6 +1,9 @@
-SEO:
+SEO_options:
   site_title: Fiction
   description: A template for Hugo, adapted from the MIT-licensed Fiction Bootstrap template from Theme Fisher.
+  twitter_image: 
+  twitter_site: 
+  image: 
 company_name: REDCODDER SOLUTION
 contact:
   address: "DeviserWeb 24/A,Jalalabad amborkhana amagnina, Sylhet."
