feat: remove debugging, add favicon

--- a/data/company.yml
+++ b/data/company.yml
@@ -4,6 +4,7 @@ SEO_options:
   twitter_image: 
   twitter_site: 
   image: 
+favicon: /images/favicon.ico
 company_name: REDCODDER SOLUTION
 contact:
   address: "DeviserWeb 24/A,Jalalabad amborkhana amagnina, Sylhet."
