test/fix: dont show components page in CloudCannon

--- a/cloudcannon.config.yaml
+++ b/cloudcannon.config.yaml
@@ -5,6 +5,9 @@ collections_config:
     schemas:
       page:
         path: schemas/page.md
+    filter:
+      exclude:
+        - components.md
   portfolios:
     schemas:
       default:
